# ONT-TCRconsensus

./: .gitignore  .ruff.toml  README.md  ont_tcr_consensus.yml  pyproject.toml
ONT-TCRconsensus/: analysis.py  count.py  extract_umis.py  medaka_polish.py  parse_umi_clusters.py  preprocessing.py  region_split.py
configs/: run_config.json
notebooks/: analysis.ipynb
ont_tcr_consensus/: analysis.py  medaka_polish.py  minimap2_align.py  tcr_consensus.py  utils.py  vsearch_umi_cluster.py
ont_tcr_consensus/primers/: primers.fasta
scripts/: rsync_fastq_to_nano_tcr_cpu_processing_dir.sh  run_basecall_pipeline_multi-gpu.sh  run_tcr_consensus_slurm.sh
